Fix crash on NeoForge .97